k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: barnebys
  labels:
    name: barnebys
    app: barnebys-backend
